--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- Theme style -->
     <link rel="stylesheet" href="<%= BASE_URL %>dist/css/adminlte.min.css" />
   </head>
-  <body>
+  <body class="hold-transition sidebar-mini layout-fixed">
     <noscript>
       <strong>
         We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it
