--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,7 @@
     <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="<%= BASE_URL %>dist/js/adminlte.min.js"></script>
+    <!-- Font Awesome 5 -->
+    <script src="https://kit.fontawesome.com/ff840c6eaf.js" crossorigin="anonymous"></script>
   </body>
 </html>
